fix text alignment for alert

--- a/quizcreator-backend/public/stylesheet/main.css
+++ b/quizcreator-backend/public/stylesheet/main.css
@@ -13,3 +13,7 @@ h1 {
 #logout-btn {
   float: right;
 }
+
+.alert {
+  text-align: center;
+}
